--- a/GMS.Lib.DataAccess/packages.config
+++ b/GMS.Lib.DataAccess/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.2.20" targetFramework="net451" developmentDependency="true" />
   <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net451" />
